@@ -338,7 +338,14 @@
       \item Some \code{as.data.frame()} methods, notably the
       \code{matrix} one, are now more careful in not accepting
       duplicated or \code{NA} row names, and by default produce unique
-      non-NA row names.  This is based on \code{row.names(x, make.names = *)
+      non-NA row names.  This is based on new function
+      \code{.rowNamesDF(x, make.names = *) <- rNms} where the logical \code{make.names}
+      allows to specify \emph{how} invalid row names \code{rNms} are
+      handled.  \code{.rowNamesDF()} is a \dQuote{workaround}
+      compatible default.<-`}
+
+
+function \code{row.names(x, make.names = *)
 	<- rNms} where \code{make.names} is a new logical, with back
       compatible default.
     }
